<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <parent>
        <artifactId>api-maven-plugin-bom</artifactId>
        <groupId>de.badminton.neubiberg</groupId>
        <version>1.0</version>
        <relativePath>../bom</relativePath>
    </parent>
    <modelVersion>4.0.0</modelVersion>

    <artifactId>api-maven-plugin-spring-processor</artifactId>
    <properties>
        <maven.compiler.source>20</maven.compiler.source>
        <maven.compiler.target>20</maven.compiler.target>
    </properties>


    <dependencies>
        <dependency>
            <groupId>de.badminton.neubiberg</groupId>
            <artifactId>api-maven-plugin-core</artifactId>
        </dependency>
        <dependency>
            <groupId>de.badminton.neubiberg</groupId>
            <artifactId>processor-common</artifactId>
        </dependency>

        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-web</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-webmvc</artifactId>
        </dependency>

        <dependency>
            <groupId>javax.servlet</groupId>
            <artifactId>javax.servlet-api</artifactId>
        </dependency>
        <dependency>
            <groupId>jakarta.validation</groupId>
            <artifactId>jakarta.validation-api</artifactId>
        </dependency>
        <dependency>
            <groupId>de.badminton.neubiberg</groupId>
            <artifactId>annotations</artifactId>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <proc>none</proc>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>